로고클릭/작업사진/견적문의/로그인  제외하고 완

--- a/about.html
+++ b/about.html
@@ -7,24 +7,57 @@
 </head>
 <body>
 <header>
+
     <div class="logo">구조변경 박대장</div>
     <nav>
-        <button onclick="location.href='index.html'">홈</button>
-        <button onclick="location.href='about.html'">소개</button>
-        <button onclick="location.href='process.html'">작업 과정</button>
-        <button onclick="location.href='gallery.html'">작업 사진</button>
-        <button onclick="location.href='map.html'">이용 안내</button>
-        <button onclick="location.href='contact.html'">견적 문의</button>
-    </nav>
-</header>
+  <button data-href="index.html">홈</button>
+  <button data-href="about.html">소개</button>
+  <button data-href="process.html">작업 과정</button>
+  <button data-href="gallery.html">작업 사진</button>
+  <button data-href="map.html">이용 안내</button>
+  <button data-href="contact.html">견적 문의</button>
+</nav>
 
+
+</header>
+<div class="tabs">
+    <div class="tab active" data-tab="tab1">소개</div>
+    <div class="tab" data-tab="tab2">구조변경</div>
+  </div>
+
+   
 <section class="section">
+      <!-- 소개 TAP 내용 -->
+<div class="tab-content" id="tab1">
     <h1>소개</h1>
-    <p>여기는 구조변경 박대장을 소개하는 페이지입니다.</p>
+    <img src="https://modo-phinf.pstatic.net/20230328_222/1680007922344qX8cb_PNG/mosakpZzMo.png?type=w720" alt="구조조정 박대장_소개1" style="width:70%;" />
+</div>
+
+<!-- 구조변경 TAP 내용 -->
+<div class="tab-content" id="tab2">
+    <h1>구조변경</h1>
+    <img src="https://modo-phinf.pstatic.net/20230326_172/1679814435766ebQ7n_PNG/mosakOjhQt.png?type=w720" alt="구조조정 박대장_소개2" style="width:70%;" />
+    <div class="text-content">
+        <p>구조변경 박대장입니다.</p>
+        <p>자동차 구조변경 검사, 까다롭고 복잡하시죠?<br>
+        차량 법규, 제도적, 기술적으로 어려운 일들을 10년간의 경험과 전문적인 Know-How로 문제를 해결해 드리겠습니다.</p>
+        <p>☞승인과 검사 역할 진행<br>
+        -구조 변경 설계도면, 사전 승인 및 검사 대행</p>
+        <p>☞자동차 구조 변경 대상<br>
+        -각종 차량 구조 변경, 철스크랩 운반 전용, 암롤(적재함 제외, 암롤 자동 덮개), 적재함 바닥 보강 등</p>
+        <p>각종 차량 구조 변경 검사에 대해서 합리적인 비용으로 불필요한 시간을 최대한 줄여드리겠습니다.</p>
+        <p>궁금한 점 있으시면 언제든지 문의 주세요!</p>
+    
+    </div>
+
+    
 </section>
 
 <footer>
     <p>&copy; 2025 구조변경 박대장</p>
 </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
