--- a/gallery.html
+++ b/gallery.html
@@ -9,22 +9,114 @@
 <header>
     <div class="logo">구조변경 박대장</div>
     <nav>
-        <button onclick="location.href='index.html'">홈</button>
-        <button onclick="location.href='about.html'">소개</button>
-        <button onclick="location.href='process.html'">작업 과정</button>
-        <button onclick="location.href='gallery.html'">작업 사진</button>
-        <button onclick="location.href='map.html'">이용 안내</button>
-        <button onclick="location.href='contact.html'">견적 문의</button>
+        <button data-href="index.html">홈</button>
+  <button data-href="about.html">소개</button>
+  <button data-href="process.html">작업 과정</button>
+  <button data-href="gallery.html">작업 사진</button>
+  <button data-href="map.html">이용 안내</button>
+  <button data-href="contact.html">견적 문의</button>
     </nav>
 </header>
+<div class="tabs">
+    <div class="tab active" data-tab="tab1">철스크랩 운반 차량 구조변경</div>
+    <div class="tab" data-tab="tab2">암롤 구조변경</div>
+    <div class="tab" data-tab="tab3">카케리어 구조변경</div>
+    <div class="tab" data-tab="tab4">집게차 구조변경</div>
+    <div class="tab" data-tab="tab5">진개덤프 구조변경</div>
+    <div class="tab" data-tab="tab6">캠핑카 구조변경</div>
+    <div class="tab" data-tab="tab7">가축 운반 차량 구조변경</div>
+    <div class="tab" data-tab="tab8">기타 (자기인증)</div>
+</div>
 
 <section class="section">
-    <h1>작업 사진</h1>
-    <p>여기는 작업 사진을 보여주는 페이지입니다.</p>
+    <!-- 작업사진 탭들 -->
+    <div class="tab-content active" id="tab1">
+        <h1>철스크랩 운반 차량 구조변경</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진1">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진2">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진3">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진4">
+        </div>
+    </div>
+    <div class="tab-content" id="tab2">
+        <h1>암롤 구조변경</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진5">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진6">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진7">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진8">
+        </div>
+    </div>
+    <div class="tab-content" id="tab3">
+        <h1>카케리어 구조변경</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진9">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진10">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진11">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진12">
+        </div>
+    </div>
+    <div class="tab-content" id="tab4">
+        <h1>집게차 구조변경</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진13">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진14">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진15">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진16">
+        </div>
+    </div>
+    <div class="tab-content" id="tab5">
+        <h1>진개덤프 구조변경</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진17">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진18">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진19">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진20">
+        </div>
+    </div>
+    <div class="tab-content" id="tab6">
+        <h1>캠핑카 구조변경</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진21">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진22">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진23">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진24">
+        </div>
+    </div>
+    <div class="tab-content" id="tab7">
+        <h1>가축 운반 차량 구조변경</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진25">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진26">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진27">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진28">
+        </div>
+    </div>
+    <div class="tab-content" id="tab8">
+        <h1>기타 (자기인증)</h1>
+        <section class="gallery">
+        <div class="gallery-grid">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진29">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진30">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진31">
+            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진32">
+        </div>
+    </div>
 </section>
 
 <footer>
     <p>&copy; 2025 구조변경 박대장</p>
 </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
