--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 <header>
     <div class="logo">구조변경 박대장</div>
     <nav>
-        <button onclick="location.href='index.html'">홈</button>
-        <button onclick="location.href='about.html'">소개</button>
-        <button onclick="location.href='process.html'">작업 과정</button>
-        <button onclick="location.href='gallery.html'">작업 사진</button>
-        <button onclick="location.href='map.html'">이용 안내</button>
-        <button onclick="location.href='contact.html'">견적 문의</button>
-    </nav>
+        <button data-href="index.html">홈</button>
+        <button data-href="about.html">소개</button>
+        <button data-href="process.html">작업 과정</button>
+        <button data-href="gallery.html">작업 사진</button>
+        <button data-href="map.html">이용 안내</button>
+        <button data-href="contact.html">견적 문의</button>
 </header>
 
 <section class="section">
-    <h1>홈페이지에 오신 것을 환영합니다</h1>
-    <p>여기는 구조변경 박대장 홈페이지의 메인 페이지입니다.</p>
+    <img src="image/구조변경_홈.png" style="width:100%">
 </section>
 
 <footer>
     <p>&copy; 2025 구조변경 박대장</p>
 </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
