--- a/contact.html
+++ b/contact.html
@@ -4,27 +4,109 @@
     <meta charset="UTF-8">
     <title>견적 문의 | 구조변경 박대장</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+        }
+        h2 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+        }
+        .form-row {
+            display: flex;
+            margin-bottom: 1rem;
+        }
+        .form-label {
+            width: 100px;
+            flex-shrink: 0;
+        }
+        .form-input {
+            flex: 1;
+        }
+        input[type="text"], textarea {
+            width: 100%;
+            padding: 0.5rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        textarea {
+            height: 100px;
+        }
+        .checkbox-row {
+            margin-top: 1rem;
+        }
+        .buttons {
+            margin-top: 1rem;
+        }
+        .buttons button {
+            padding: 0.5rem 1rem;
+            margin-right: 1rem;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        .cancel {
+            background-color: #ccc;
+        }
+        .submit {
+            background-color: #007bff;
+            color: #fff;
+        }
+</style>
 </head>
 <body>
 <header>
     <div class="logo">구조변경 박대장</div>
     <nav>
-        <button onclick="location.href='index.html'">홈</button>
-        <button onclick="location.href='about.html'">소개</button>
-        <button onclick="location.href='process.html'">작업 과정</button>
-        <button onclick="location.href='gallery.html'">작업 사진</button>
-        <button onclick="location.href='map.html'">이용 안내</button>
-        <button onclick="location.href='contact.html'">견적 문의</button>
+        <button data-href="index.html">홈</button>
+  <button data-href="about.html">소개</button>
+  <button data-href="process.html">작업 과정</button>
+  <button data-href="gallery.html">작업 사진</button>
+  <button data-href="map.html">이용 안내</button>
+  <button data-href="contact.html">견적 문의</button>
     </nav>
 </header>
 
 <section class="section">
     <h1>견적 문의</h1>
-    <p>여기는 견적 문의를 위한 페이지입니다.</p>
+    <p style="font-size: 14px;">*견적 제안은 고객님의 구조변경 차량에 대한 요청 사항 확인 후 유선상으로 진행됩니다.</p>
+    <div class="container">
+    <form>
+      <div class="form-row">
+        <label class="form-label" for="name">이름</label>
+        <div class="form-input"><input type="text" id="name" name="name"></div>
+      </div>
+      <div class="form-row">
+        <label class="form-label" for="contact">연락처</label>
+        <div class="form-input"><input type="text" id="contact" name="contact"></div>
+      </div>
+      <div class="form-row">
+        <label class="form-label" for="message">문의사항</label>
+        <div class="form-input"><textarea id="message" name="message"></textarea></div>
+      </div>
+      <div class="checkbox-row">
+        <input type="checkbox" id="privacy" name="privacy">
+        <label for="privacy">개인정보 수집 및 이용에 동의합니다. <a href="#">내용보기</a></label>
+      </div>
+      <div class="buttons">
+        <button type="button" class="cancel">취소</button>
+        <button type="submit" class="submit">등록</button>
+      </div>
+    </form>
+  </div>
+
 </section>
 
 <footer>
     <p>&copy; 2025 구조변경 박대장</p>
 </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
