--- a/process.html
+++ b/process.html
@@ -9,22 +9,25 @@
 <header>
     <div class="logo">구조변경 박대장</div>
     <nav>
-        <button onclick="location.href='index.html'">홈</button>
-        <button onclick="location.href='about.html'">소개</button>
-        <button onclick="location.href='process.html'">작업 과정</button>
-        <button onclick="location.href='gallery.html'">작업 사진</button>
-        <button onclick="location.href='map.html'">이용 안내</button>
-        <button onclick="location.href='contact.html'">견적 문의</button>
+        <button data-href="index.html">홈</button>
+  <button data-href="about.html">소개</button>
+  <button data-href="process.html">작업 과정</button>
+  <button data-href="gallery.html">작업 사진</button>
+  <button data-href="map.html">이용 안내</button>
+  <button data-href="contact.html">견적 문의</button>
     </nav>
 </header>
 
 <section class="section">
     <h1>작업 진행 과정</h1>
-    <p>여기는 작업 과정을 설명하는 페이지입니다.</p>
+    <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 과정" style="width:70%;" />
 </section>
 
 <footer>
     <p>&copy; 2025 구조변경 박대장</p>
 </footer>
+
+<script src="script.js"></script>
+
 </body>
 </html>
