--- a/gallery.html
+++ b/gallery.html
@@ -7,15 +7,20 @@
 </head>
 <body>
 <header>
-    <div class="logo">구조변경 박대장</div>
+    <div class="logo"> 
+        <a href="index.html">구조변경 박대장</a>
+    </div>
     <nav>
         <button data-href="index.html">홈</button>
-  <button data-href="about.html">소개</button>
-  <button data-href="process.html">작업 과정</button>
-  <button data-href="gallery.html">작업 사진</button>
-  <button data-href="map.html">이용 안내</button>
-  <button data-href="contact.html">견적 문의</button>
+        <button data-href="about.html">소개</button>
+        <button data-href="process.html">작업 과정</button>
+        <button data-href="gallery.html">작업 사진</button>
+        <button data-href="map.html">이용 안내</button>
+        <button data-href="contact.html">견적 문의</button>
     </nav>
+        <!-- <div class="login">
+            <a href="login.html">로그인</a>
+        </div> -->
 </header>
 <div class="tabs">
     <div class="tab active" data-tab="tab1">철스크랩 운반 차량 구조변경</div>
@@ -32,82 +37,153 @@
     <!-- 작업사진 탭들 -->
     <div class="tab-content active" id="tab1">
         <h1>철스크랩 운반 차량 구조변경</h1>
-        <section class="gallery">
-        <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진1">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진2">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진3">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진4">
+        <div class="gallery-subtitle">
+            <h3>철스크랩 운반 전용 차량 구조변경</h3>
         </div>
+        <section class="gallery">
+            <div class="gallery-grid">
+                <img src="https://modo-phinf.pstatic.net/20230328_17/1679977522799jfBfk_JPEG/mosaqTPsxK.jpeg?type=w720" alt="구조변경 박대장_철스크랩1">
+                <img src="https://modo-phinf.pstatic.net/20230328_124/1679977523344DQLbi_JPEG/mosaG3ZC5v.jpeg?type=w720" alt="구조변경 박대장_철스크랩랩2">
+                <img src="https://modo-phinf.pstatic.net/20230328_200/1679977524125AOYLy_JPEG/mosagV5S49.jpeg?type=w720" alt="구조변경 박대장_철스크랩랩3">
+                <img src="https://modo-phinf.pstatic.net/20230328_66/1679977524777YcYFI_JPEG/mosaScfuPo.jpeg?type=w720" alt="구조변경 박대장_철스크랩랩4">
+                <img src="https://modo-phinf.pstatic.net/20230328_265/1679977525531CWMfB_JPEG/mosaKWYQrC.jpeg?type=w720" alt="구조변경 박대장_철스크랩랩5">
+                <img src="https://modo-phinf.pstatic.net/20230328_258/1679977526170tlFts_JPEG/mosaKeQRom.jpeg?type=w720" alt="구조변경 박대장_철스크랩랩6">
+            </div>
+        </section>
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 철스크랩 운반 전용 차량 구조변경 사진입니다.<br>(MAN, DAEWOO PRIMA, MAXEN, SCANIA, XCIENT)</p>
+        </div>
+    </div>
+       
     </div>
     <div class="tab-content" id="tab2">
         <h1>암롤 구조변경</h1>
+        <div class="gallery-subtitle">
+            <h3>암롤(적재함 제외) 구조변경</h3>
+        </div>
         <section class="gallery">
         <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진5">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진6">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진7">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진8">
+            <img src="https://modo-phinf.pstatic.net/20230328_91/1679976303022AzyFV_JPEG/mosaob3gMj.jpeg?type=w720" alt="구조변경 박대장_암롤1">
+            <img src="https://modo-phinf.pstatic.net/20230328_276/1679976303798iPCab_JPEG/mosaan1i54.jpeg?type=w720" alt="구조변경 박대장_암롤2">
+            <img src="https://modo-phinf.pstatic.net/20230328_105/16799763042489pyl9_JPEG/mosaw99GmN.jpeg?type=w720" alt="구조변경 박대장_암롤3">
+            <img src="https://modo-phinf.pstatic.net/20230328_285/1679976304746fJOAH_JPEG/mosaSJ2r6o.jpeg?type=w720" alt="구조변경 박대장_암롤4">
+            <img src="https://modo-phinf.pstatic.net/20230328_293/1679976305657MbV5B_JPEG/mosa3qPqUq.jpeg?type=w720" alt="구조변경 박대장_암롤5">
+            <img src="https://modo-phinf.pstatic.net/20230328_184/1679976306202NUG2v_JPEG/mosabOyMUD.jpeg?type=w720" alt="구조변경 박대장_암롤6">
+        </div>
+        </section>
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 암롤 구조변경 사진입니다.<br>(HYUNDAI TRAGO)</p>
         </div>
     </div>
     <div class="tab-content" id="tab3">
         <h1>카케리어 구조변경</h1>
+        <div class="gallery-subtitle">
+            <h3>카케리어 난간대 빛 발판 구조변경</h3>
+        </div>
         <section class="gallery">
         <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진9">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진10">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진11">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진12">
+            <img src="https://modo-phinf.pstatic.net/20230328_59/1679978652285GNTLX_JPEG/mosaMrC1ad.jpeg?type=w720" alt="구조변경 박대장_카케리어1">
+            <img src="https://modo-phinf.pstatic.net/20230328_2/1679978652760qHp9Y_JPEG/mosas0P4gT.jpeg?type=w720" alt="구조변경 박대장_카케리어2">
+            <img src="https://modo-phinf.pstatic.net/20230328_122/1679978653366EDW1y_JPEG/mosauKunL8.jpeg?type=w720" alt="구조변경 박대장_카케리어3">
+            <img src="https://modo-phinf.pstatic.net/20230328_187/1679978654101WEUsr_JPEG/mosaNbl2s5.jpeg?type=w720" alt="구조변경 박대장_카케리어4">
+            <img src="https://modo-phinf.pstatic.net/20230328_90/1679978654816M4Bb7_JPEG/mosacl1F86.jpeg?type=w720" alt="구조변경 박대장_카케리어5">
+        </div>
+        </section>
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 카케리어 난간대 및 발판 구조변경 사진입니다.<br>(MAN, DAEWOO PRIMA, MAXEN, SCANIA, XCIENT)</p>
         </div>
     </div>
     <div class="tab-content" id="tab4">
         <h1>집게차 구조변경</h1>
+        <div class="gallery-subtitle">
+            <h3>집게차 구조변경</h3>
+        </div>
         <section class="gallery">
-        <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진13">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진14">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진15">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진16">
+            <div class="gallery-grid">
+                <img src="https://modo-phinf.pstatic.net/20230328_140/1679979120500XY8Te_JPEG/mosaQqkLbx.jpeg?type=w720" alt="구조변경 박대장_집게차1">
+                <img src="https://modo-phinf.pstatic.net/20230328_197/1679979121031OMEWt_JPEG/mosaYw9lAo.jpeg?type=w720" alt="구조변경 박대장_집게차2">
+                <img src="https://modo-phinf.pstatic.net/20230328_273/1679979121799C0g4S_JPEG/mosaENWi06.jpeg?type=w720" alt="구조변경 박대장_집게차3">
+                <img src="https://modo-phinf.pstatic.net/20230328_220/1679979122534tcPvj_JPEG/mosamobWay.jpeg?type=w720" alt="구조변경 박대장_집게차4">
+                <img src="https://modo-phinf.pstatic.net/20230328_248/1679979123276LmQJ4_JPEG/mosatw9xjj.jpeg?type=w720" alt="구조변경 박대장_집게차5">
+            </div>
+        </section> 
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 집게차 구조변경 사진입니다.<br>(HYUNDAI TRAGO)</p>
         </div>
     </div>
     <div class="tab-content" id="tab5">
         <h1>진개덤프 구조변경</h1>
+        <div class="gallery-subtitle">
+            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+        </div>
         <section class="gallery">
         <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진17">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진18">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진19">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진20">
+            <img src="https://modo-phinf.pstatic.net/20230328_43/1679979472794YqJ8f_JPEG/mosayymRl7.jpeg?type=w720" alt="구조변경 박대장_진개덤프1">
+            <img src="https://modo-phinf.pstatic.net/20230328_278/1679979473287e1VMV_JPEG/mosav7E7Ev.jpeg?type=w720" alt="구조변경 박대장_진개덤프2">
+            <img src="https://modo-phinf.pstatic.net/20230328_103/1679979473839Pqn3i_JPEG/mosa0eKv4C.jpeg?type=w720" alt="구조변경 박대장_진개덤프3">
+        </div>
+        </section>
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 진개덤프 자동 덮개 구조변경 사진입니다.<br>(HYUNDAI TRAGO)</p>
         </div>
     </div>
     <div class="tab-content" id="tab6">
         <h1>캠핑카 구조변경</h1>
+        <div class="gallery-subtitle">
+            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+        </div>
         <section class="gallery">
-        <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진21">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진22">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진23">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진24">
+            <div class="gallery-grid">
+                <img src="https://modo-phinf.pstatic.net/20230328_271/1679979829292INhIv_JPEG/mosaxIjQK8.jpeg?type=f320_320" alt="구조변경 박대장_켐핑카1">
+                <img src="https://modo-phinf.pstatic.net/20230328_188/1679979830304SWOgT_JPEG/mosamivm64.jpeg?type=f320_320" alt="구조변경 박대장_캠핑카2">
+                <img src="https://modo-phinf.pstatic.net/20230328_284/1679979831175hcQtR_JPEG/mosajlvXJU.jpeg?type=f320_320" alt="구조변경 박대장_캠핑카3">
+                <img src="https://modo-phinf.pstatic.net/20230328_228/1679979832035tvnLF_JPEG/mosabDY2mp.jpeg?type=f320_320" alt="구조변경 박대장_캠핑카4">
+                <img src="https://modo-phinf.pstatic.net/20230328_141/1679979833197dm86F_JPEG/mosangcfw2.jpeg?type=f320_320" alt="구조변경 박대장_캠핑카5">
+                <img src="https://modo-phinf.pstatic.net/20230328_291/1679979833811T5cz7_JPEG/mosaFIrxDn.jpeg?type=f320_320" alt="구조변경 박대장_캠핑카6">
+            </div>
+        </section>
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 캠핑카 구조변경 사진입니다.<br>(MAN, DAEWOO PRIMA, MAXEN, SCANIA, XCIENT)</p>
         </div>
     </div>
     <div class="tab-content" id="tab7">
         <h1>가축 운반 차량 구조변경</h1>
+        <div class="gallery-subtitle">
+            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+        </div>
         <section class="gallery">
-        <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진25">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진26">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진27">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진28">
+            <div class="gallery-grid">
+                <img src="https://modo-phinf.pstatic.net/20230328_10/1679980092195sJHxa_JPEG/mosaNWmeqh.jpeg?type=f320_320" alt="구조변경 박대장_가축운반1">
+                <img src="https://modo-phinf.pstatic.net/20230328_26/16799800927417GYxN_JPEG/mosalXWsRE.jpeg?type=f320_320" alt="구조변경 박대장_가축운반2">
+                <img src="https://modo-phinf.pstatic.net/20230328_61/1679980093278vcBSp_JPEG/mosaqb5jv7.jpeg?type=f320_320" alt="구조변경 박대장_가축운반3">
+                <img src="https://modo-phinf.pstatic.net/20230328_51/1679980093865aqOYm_JPEG/mosayPdPBb.jpeg?type=f320_320" alt="구조변경 박대장_가축운반4">
+                <img src="https://modo-phinf.pstatic.net/20230328_185/1679980094570iiT1d_JPEG/mosacpnRmR.jpeg?type=f320_320" alt="구조변경 박대장_가축운반5">
+                <img src="https://modo-phinf.pstatic.net/20230328_101/1679980095206pvuGQ_JPEG/mosaAAPAnu.jpeg?type=f320_320" alt="구조변경 박대장_가축운반6">
+            </div>
+        </section>
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 가축 운반 차량 구조변경 사진입니다.<br>(HYUNDAI TRAGO)</p>
         </div>
     </div>
     <div class="tab-content" id="tab8">
         <h1>기타 (자기인증)</h1>
+        <div class="gallery-subtitle">
+            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+        </div>
         <section class="gallery">
-        <div class="gallery-grid">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진29">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진30">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진31">
-            <img src="https://modo-phinf.pstatic.net/20230330_27/1680150917214dtsVD_PNG/mosaERQHi3.png?type=w720" alt="구조변경 박대장_작업 사진32">
+            <div class="gallery-grid">
+                <img src="https://modo-phinf.pstatic.net/20230403_203/16805149582973LkjL_JPEG/mosa6vQL44.jpeg?type=f320_320" alt="구조변경 박대장_기타1">
+                <img src="https://modo-phinf.pstatic.net/20230403_60/168051495918648zux_JPEG/mosagVSGVV.jpeg?type=f320_320" alt="구조변경 박대장_기타2">
+                <img src="https://modo-phinf.pstatic.net/20230403_127/1680514959650a6gA2_JPEG/mosatW5yup.jpeg?type=f320_320" alt="구조변경 박대장_기타3">
+                <img src="https://modo-phinf.pstatic.net/20230403_192/16805149601068XChL_JPEG/mosaOIFaCb.jpeg?type=f320_320" alt="구조변경 박대장_기타4">
+                <img src="https://modo-phinf.pstatic.net/20230403_75/1680514960732bk7sa_JPEG/mosaz2oXgM.jpeg?type=f320_320" alt="구조변경 박대장_기타5">
+                <img src="https://modo-phinf.pstatic.net/20230403_42/16805149613351iS6q_JPEG/mosarIBVtc.jpeg?type=f320_320" alt="구조변경 박대장_기타6">
+                <img src="https://modo-phinf.pstatic.net/20230403_40/1680514961746CGo2C_JPEG/mosaqGl2Q9.jpeg?type=f320_320" alt="구조변경 박대장_기타7">
+                <img src="https://modo-phinf.pstatic.net/20230403_298/16805149621949ne5t_JPEG/mosai9Sv4e.jpeg?type=f320_320" alt="구조변경 박대장_기타8">
+            </div>
+        </section>
+        <div class="text-content">
+            <p style="color: gray; padding-top: 20px;">*위 사진은 실제 구조변경 사진입니다.</p>
         </div>
     </div>
 </section>
