--- a/map.html
+++ b/map.html
@@ -7,15 +7,20 @@
 </head>
 <body>
 	<header>
-    <div class="logo">구조변경 박대장</div>
-    <nav>
-        <button data-href="index.html">홈</button>
-  <button data-href="about.html">소개</button>
-  <button data-href="process.html">작업 과정</button>
-  <button data-href="gallery.html">작업 사진</button>
-  <button data-href="map.html">이용 안내</button>
-  <button data-href="contact.html">견적 문의</button>
-    </nav>
+		<div class="logo"> 
+			<a href="index.html">구조변경 박대장</a>
+		</div>
+		<nav>
+			<button data-href="index.html">홈</button>
+			<button data-href="about.html">소개</button>
+			<button data-href="process.html">작업 과정</button>
+			<button data-href="gallery.html">작업 사진</button>
+			<button data-href="map.html">이용 안내</button>
+			<button data-href="contact.html">견적 문의</button>
+		</nav>
+        <!-- <div class="login">
+            <a href="login.html">로그인</a>
+        </div> -->
 </header>
 <div class="tabs">
     <div class="tab active" data-tab="tab1">구조변경 박대장</div>
