로그인 1차 완

--- a/contact.html
+++ b/contact.html
@@ -194,7 +194,23 @@
 </section>
 
 <footer>
-    <p>&copy; 2025 구조변경 박대장</p>
+    <div class="footer_inner">
+        <div class="footer_logo">
+            <p>&copy; 2025 구조변경 박대장</p>
+        
+            <div class="sns_btns">
+                <button class="sns_btn" onclick="window.open('https://www.youtube.com/@parkdaejang')">>
+                    <!-- 유튜브 아이콘 (SVG) -->
+                    <img src="/image/Youtube_logo.png" alt="유튜브 아이콘" style="width: 39px; height: 26px;">
+                </button>
+                <button class="sns_btn" onclick="window.open('https://m.blog.naver.com/tuning_manager?tab=1')">
+                    <!-- 네이버 블로그 아이콘 (SVG) -->
+                    <img src="/image/blog2.png" alt="네이버 블로그 아이콘" style="width: 36px; height: 36px;">
+                </button>
+            </div>
+        </div>
+    </div>
+    
 </footer>
 
 <script src="script.js"></script>
