--- a/gallery.html
+++ b/gallery.html
@@ -114,7 +114,7 @@
     <div class="tab-content" id="tab5">
         <h1>진개덤프 구조변경</h1>
         <div class="gallery-subtitle">
-            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+            <h3>진개덤프 자동 덮개 구조변경</h3>
         </div>
         <section class="gallery">
         <div class="gallery-grid">
@@ -130,7 +130,7 @@
     <div class="tab-content" id="tab6">
         <h1>캠핑카 구조변경</h1>
         <div class="gallery-subtitle">
-            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+            <h3>캠핑카 구조변경</h3>
         </div>
         <section class="gallery">
             <div class="gallery-grid">
@@ -149,7 +149,7 @@
     <div class="tab-content" id="tab7">
         <h1>가축 운반 차량 구조변경</h1>
         <div class="gallery-subtitle">
-            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+            <h3>가축 운반 차량 구조변경</h3>
         </div>
         <section class="gallery">
             <div class="gallery-grid">
@@ -168,7 +168,7 @@
     <div class="tab-content" id="tab8">
         <h1>기타 (자기인증)</h1>
         <div class="gallery-subtitle">
-            <h3>철스크랩 운반 전용 차량 구조변경</h3>
+            <h3>기타 (자기인증)</h3>
         </div>
         <section class="gallery">
             <div class="gallery-grid">
@@ -182,14 +182,36 @@
                 <img src="https://modo-phinf.pstatic.net/20230403_298/16805149621949ne5t_JPEG/mosai9Sv4e.jpeg?type=f320_320" alt="구조변경 박대장_기타8">
             </div>
         </section>
+        <div class="custom-upload">
+            <label for="fileInput" class="custom-file-label">사진 업로드 > </label>
+            <input type="file" id="fileInput" accept="image/*" multiple>
+
+        </div>
         <div class="text-content">
             <p style="color: gray; padding-top: 20px;">*위 사진은 실제 구조변경 사진입니다.</p>
         </div>
     </div>
 </section>
 
+
 <footer>
-    <p>&copy; 2025 구조변경 박대장</p>
+    <div class="footer_inner">
+        <div class="footer_logo">
+            <p>&copy; 2025 구조변경 박대장</p>
+        
+            <div class="sns_btns">
+                <button class="sns_btn" onclick="window.open('https://www.youtube.com/@parkdaejang')">>
+                    <!-- 유튜브 아이콘 (SVG) -->
+                    <img src="/image/Youtube_logo.png" alt="유튜브 아이콘" style="width: 39px; height: 26px;">
+                </button>
+                <button class="sns_btn" onclick="window.open('https://m.blog.naver.com/tuning_manager?tab=1')">
+                    <!-- 네이버 블로그 아이콘 (SVG) -->
+                    <img src="/image/blog2.png" alt="네이버 블로그 아이콘" style="width: 36px; height: 36px;">
+                </button>
+            </div>
+        </div>
+    </div>
+    
 </footer>
 
 <script src="script.js"></script>
