--- a/gallery.html
+++ b/gallery.html
@@ -18,9 +18,9 @@
         <button data-href="map.html">이용 안내</button>
         <button data-href="contact.html">견적 문의</button>
     </nav>
-        <!-- <div class="login">
-            <a href="login.html">로그인</a>
-        </div> -->
+        <div class="login">
+            <a href="login.html" style="color:rgb(140, 140, 140)">관리자 로그인</a>
+        </div>
 </header>
 <div class="tabs">
     <div class="tab active" data-tab="tab1">철스크랩 운반 차량 구조변경</div>
@@ -182,15 +182,16 @@
                 <img src="https://modo-phinf.pstatic.net/20230403_298/16805149621949ne5t_JPEG/mosai9Sv4e.jpeg?type=f320_320" alt="구조변경 박대장_기타8">
             </div>
         </section>
+        
         <div class="custom-upload">
-            <label for="fileInput" class="custom-file-label">사진 업로드 > </label>
-            <input type="file" id="fileInput" accept="image/*" multiple>
-
+            <input type="file" id="fileInput"  multiple />
+            <button onclick="uploadPhoto()">업로드!</button>
         </div>
         <div class="text-content">
             <p style="color: gray; padding-top: 20px;">*위 사진은 실제 구조변경 사진입니다.</p>
         </div>
     </div>
+
 </section>
 
 
